--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/artFragment"
-        android:name="com.said.androidartbooktesting.view.ArtFragment"
+        android:name="com.said.androidartbooktesting.ui.view.ArtFragment"
         android:label="ArtFragment" >
         <action
             android:id="@+id/action_artFragment_to_artDetailsFragment"
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/artDetailsFragment"
-        android:name="com.said.androidartbooktesting.view.ArtDetailsFragment"
+        android:name="com.said.androidartbooktesting.ui.view.ArtDetailsFragment"
         android:label="ArtDetailsFragment" >
         <action
             android:id="@+id/action_artDetailsFragment_to_imageApiFragment"
@@ -22,6 +22,6 @@
     </fragment>
     <fragment
         android:id="@+id/imageApiFragment"
-        android:name="com.said.androidartbooktesting.view.ImageApiFragment"
+        android:name="com.said.androidartbooktesting.ui.view.ImageApiFragment"
         android:label="ImageApiFragment" />
 </navigation>
