--- a/app/src/main/res/layout/fragment_arts.xml
+++ b/app/src/main/res/layout/fragment_arts.xml
@@ -13,7 +13,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recylerViewArts"
+            android:id="@+id/recylerViewArt"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         android:clickable="true"
         android:focusable="true"
         app:fabSize="normal"
-        app:layout_anchor="@id/recylerViewArts"
+        app:layout_anchor="@id/recylerViewArt"
         app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@android:drawable/ic_input_add" />
 
