--- a/app/src/main/res/layout/fragment_image_api.xml
+++ b/app/src/main/res/layout/fragment_image_api.xml
@@ -7,12 +7,13 @@
 
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
     <EditText
-        android:id="@+id/etSearc"
+        android:id="@+id/etSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Search image"
